test-deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
  annotations:
    metallb.universe.tf/address-pool: lab-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.70.11
spec:
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
# Next `curl http://ASSIGNED_IP:8080` to test MetalLB LoadBalancer type
