test-deployment/ingress-no-tls.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-no-tls
spec:
  rules:
  - host: hello-everyone.test.kemo.labs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-for-ingress
            port:
              number: 8080
  ingressClassName: nginx
